--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,7 @@
 {
+    ;all sports: ["football", "e-sports", "basketball", "tennis", "table-tennis", "ice-hockey", "volleyball", "ufc",
+    ; "handball", "boxing", "futsal", "mma", "australian-rules-football", "motor-sport", "badminton", "baseball",
+    ; "waterpolo", "darts", "cricket", "rugby", "billiard", "floorball", "field-hockey"]
     sports = ["e-sports"]
     chromedriver = ${CHROMEDRIVER}
     chromeBinary = ${CHROME_BINARY}
