--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,15 @@
     ;all sports: ["football", "e-sports", "basketball", "tennis", "table-tennis", "ice-hockey", "volleyball", "ufc",
     ; "handball", "boxing", "futsal", "mma", "australian-rules-football", "motor-sport", "badminton", "baseball",
     ; "waterpolo", "darts", "cricket", "rugby", "billiard", "floorball", "field-hockey"]
-    sports = ["e-sports"]
     chromedriver = ${CHROMEDRIVER}
     chromeBinary = ${CHROME_BINARY}
     headlessStr = "true"
     headlessStr = ${?HEADLESS}
-    pmBaseUrl = "https://parik24.com"
+    bookies = [
+        {
+            name = "pm"
+            baseUrl = "https://parik24.com"
+            sports = ["e-sports"]
+        },
+    ]
 }
