rewrite to use firefox, fix selectors, add auto selenium driver

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,5 @@
 {
-    chromedriver = ${CHROMEDRIVER}
-    chromeBinary = ${CHROME_BINARY}
+    firefoxBinary = ${FIREFOX_BINARY}
     headlessStr = "true"
     headlessStr = ${?HEADLESS}
     bookies = [
